fix form not showing

--- a/www/static/css/awesome.css
+++ b/www/static/css/awesome.css
@@ -7,7 +7,7 @@ a:hover, a:active {
 }
  
 #vm {
-
+	display: block;
 }
  
 #loading {
